--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,4 +22,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/elch_api:${{ github.ref_name }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/dondominio-ddns:${{ github.ref_name }}
